kolejne zmiany w search, projector, blog, przepisy i porady

--- a/style/index.scss
+++ b/style/index.scss
@@ -55,4 +55,4 @@
 @import "./scss/our/productpage.scss";
 @import "./scss/our/searchpage.scss";
 @import "./scss/our/mainpage.scss";
-
+@import "./scss/our/blog-list.scss";
