--- a/style/scss/IAI/bootstrap.scss
+++ b/style/scss/IAI/bootstrap.scss
@@ -4201,8 +4201,9 @@ img.b-loaded {
         background: none;
         &:hover {
             box-shadow: 0 0 0 2px #b29370 inset;
-            .product__compare_item.--add.btn {
-                transition: box-shadow 0.3s ease-in-out;
+            .product__check_item,
+            .product__compare_item {
+                transition: all 0.3s ease-in-out;
                 box-shadow: 0 0 0 2px #b29370 inset;
             }
         }
@@ -4251,6 +4252,11 @@ img.b-loaded {
         position: relative;
         margin-top: 1rem;
     }
+    .checkBtns {
+        transform: translateY(85%);
+        overflow: hidden;
+    }
+    .product__check_item,
     .product__compare_item {
         z-index: 1;
         text-align: center;
@@ -4259,18 +4265,35 @@ img.b-loaded {
         font-family: Futura;
         color: #333;
         background-color: white;
-        transform: translateY(75%);
         padding: 1.5rem 2.5rem;
         text-decoration: none;
         &:hover {
-            color: white;
-            border: 1px solid #b29370;
+            color: white !important;
+            text-decoration: none !important;
+            // border: 1px solid #b29370;
             background-color: #b29370;
             .icon--right-arrow:after {
                 color: white;
             }
         }
     }
+    .product__compare_item {
+        visibility: hidden;
+        margin-left: -100%;
+    }
+    .product {
+        &:hover {
+            .product__check_item,
+            .product__compare_item {
+                box-shadow: 0 0 0 2px #b29370 inset;
+            }
+            .product__compare_item {
+                visibility: visible;
+                margin-left: 0%;
+            }
+        }
+    }
+
     .icon--right-arrow:after {
         content: "\F105";
         font-family: FontAwesome;
