--- a/style/scss/our/header.scss
+++ b/style/scss/our/header.scss
@@ -25,7 +25,7 @@
     }
 }
 @media all and (min-width: 976px) {
-    .largeLogo #Logo {
+    .largeLogo #logo {
         align-items: flex-start;
         .small {
             display: none;
