--- a/style/scss/our/searchpage.scss
+++ b/style/scss/our/searchpage.scss
@@ -54,6 +54,11 @@ div.px-2.py-1.d-flex.flex-row.justify-content-center.align-items-center {
     i {
         color: #b29370 !important;
     }
+    &.active {
+        i:before {
+            content: "\f077";
+        }
+    }
 }
 
 .product-img {
@@ -85,4 +90,24 @@ div.px-2.py-1.d-flex.flex-row.justify-content-center.align-items-center {
 
 #search > div:nth-child(3) > a.position-absolute.product__compare_item.--add.btn > div :hover {
     color: white;
+}
+.search_page {
+    .f-dropdown {
+        position: relative;
+        max-width: 50%;
+    }
+}
+
+.noContentInfo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+.noContent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
