--- a/style/scss/IAI/button.scss
+++ b/style/scss/IAI/button.scss
@@ -129,7 +129,7 @@
     }
 }
 .back_button {
-    display: inline-block;
+    display: none;
     vertical-align: middle;
     width: 85px;
     font-size: 1em;
