--- a/old/product.css
+++ b/old/product.css
@@ -72,7 +72,7 @@ samp {
     content: " ";
     height: 65px;
     width: 75px;
-    background-image: url(https://www.konesso.pl/data/designs/xsl/11_1/xsl/img/icons.png?v=1701432610277);
+    background-image: url(../assets/icons.png);
     background-position: -296px -52px;
 }
 
@@ -9910,7 +9910,7 @@ html:not(.--vat) .price_vat {
     .article__image_wrapper {
         float: right;
         max-width: 35%;
-        margin: 0 0 5px 10px;
+        /* margin: 0 0 5px 10px; */
     }
 }
 
@@ -16909,7 +16909,7 @@ div.ui-helper-hidden-accessible {
     width: 4rem;
     height: 4rem;
     background-position: -100px -75px;
-    background-image: url(https://www.konesso.pl/data/designs/xsl/11_1/xsl/img/icons.png?v=1701432610277);
+    background-image: url(../assets/icons.png);
 }
 
 @media (min-width: 979px) {
