--- a/style/scss/IAI/header.scss
+++ b/style/scss/IAI/header.scss
@@ -116,7 +116,7 @@ header {
         grid-template-columns: 1fr;
     }
     .navbar-subnav.--cols2 {
-        width: calc(50% - 2rem);
+        // width: calc(50% - 2rem);
         grid-template-columns: 1fr 1fr;
     }
     .navbar-subnav.--cols3 {
@@ -719,8 +719,8 @@ span.menu_settings_currency {
         box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
         border-radius: 0;
         padding: 5rem 2.5rem 1.5rem;
-        top: 0rem;
-        right: -1rem;
+        top: 100%;
+        right: 0;
         z-index: -1;
         min-width: 230px;
         max-width: 300px;
