--- a/style/scss/IAI/header/breadcrumbs.scss
+++ b/style/scss/IAI/header/breadcrumbs.scss
@@ -19,8 +19,10 @@
         bottom: 0;
     }
     &:before {
-        left: 100px;
-        width: calc(100vw - 100px);
+        // left: 100px;
+        // width: calc(100vw - 100px);
+        left: 0;
+        width: 100%;
         height: 100%;
         background: #f1f1f1;
         position: absolute;
@@ -28,6 +30,7 @@
         display: block;
         content: "";
         z-index: -1;
+        // opacity: 0;
     }
     ol {
         list-style: none outside none;
