--- a/style/scss/our/blog-list.scss
+++ b/style/scss/our/blog-list.scss
@@ -13,17 +13,23 @@
     left: 50%;
     padding: 11px 26px;
     transform: translate(-50%, -50%);
+    @media all and (max-width: 768px) {
+        max-width: 50%;
+    }
 }
 
 .blogCategories a {
     position: relative;
-    width: 48%;
+    width: 100%;
     text-transform: uppercase;
     &:hover {
         .categoryTitle {
             color: #ffffff;
             background-color: #b29370;
         }
+    }
+    @media all and (min-width: 768px) {
+        width: 48%;
     }
 }
 
@@ -34,42 +40,69 @@
     margin-left: 1rem;
 }
 
-#blog_list {
-    .blogOverlay {
-        position: absolute;
-        width: 100%;
-        top: 0;
-        height: 100%;
-        background: linear-gradient(to top, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 100%);
-        transition: background 0.3s ease;
-        z-index: 1;
-        .article__date_name {
-            margin-bottom: 1rem;
-            display: flex;
-            position: absolute;
-            padding: 1rem 2rem;
-            z-index: 1;
-        }
+#blog_list .blogOverlay {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    height: 100%;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.1) 100%);
+    transition: background 0.3s ease;
+    z-index: 1;
+}
 
-        .article__name {
-            font-size: 1.5rem;
-            text-decoration: none;
-            padding-right: 1rem;
-            color: white;
-        }
+#blog_list .article__date_name {
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    justify-content: space-between;
+    padding: 2rem 2rem;
+    z-index: 1;
+    height: 100%;
+    top: 0;
+    .article__link {
+        max-width: 50%;
     }
 }
 
+#blog_list .datasquare {
+    color: #b29370;
+    text-align: center;
+    display: flex;
+    font-size: 2.4rem;
+    min-width: 40px;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    border: 0;
+    align-items: baseline;
+    * {
+        margin-right: 1rem;
+        color: white;
+    }
+}
+
+#blog_list .article__name {
+    font-size: 1.5rem;
+    text-decoration: none;
+    padding-right: 1rem;
+    color: white;
+}
+
 #blog_list {
-    article.article__item.col-12.col-md-3 a,
-    article.article__item.col-12.col-md-6 a {
+    .article__item {
         position: relative;
         display: inline-block;
+        &:hover {
+            .blogOverlay {
+                background-color: rgba(0, 0, 0, 0.41);
+            }
+        }
 
         img {
             object-fit: cover;
             min-height: 390px;
         }
+
         .article__name_wrapper {
             display: flex;
             align-items: center;
