--- a/style/scss/our/header.scss
+++ b/style/scss/our/header.scss
@@ -106,3 +106,25 @@ header {
         margin-right: 10ox;
     }
 }
+
+.order_process {
+    .main-holder > .col-md-2 {
+        max-width: 100%;
+        flex: 0 0 100%;
+        text-align: center;
+        justify-content: center;
+        display: flex;
+        #logo {
+            justify-content: inherit;
+        }
+    }
+
+    .infoWrapper {
+        max-width: 100%;
+        display: flex;
+        justify-content: center;
+        flex: 0 0 100%;
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+}
