--- a/style/index.scss
+++ b/style/index.scss
@@ -60,3 +60,11 @@
 .setMobileGrid #menu_settings .open_trigger {
     display: none;
 }
+
+
+.ck_dsclr__btn_v2{
+    background: #b29370 !important;
+    a{
+        color:#b29370 !important
+    }
+}
