--- a/style/scss/IAI/header/top-basket.scss
+++ b/style/scss/IAI/header/top-basket.scss
@@ -45,7 +45,7 @@
         width: 4rem;
         height: 4rem;
         background-position: -100px -75px;
-        background-image: url(../assets/icons.png);
+        background-image: url(/data/include/cms/MkFresh/theme/icons.png);
     }
     &:before {
         display: none;
