--- a/style/scss/our/header.scss
+++ b/style/scss/our/header.scss
@@ -9,7 +9,7 @@
             width: 190px;
             height: 175px;
             background-position: 0 -193px;
-            background-image: url(../assets/icons.png);
+            background-image: url(/data/include/cms/MkFresh/theme/icons.png);
         }
     }
     .small {
@@ -20,7 +20,7 @@
             width: 165px;
             height: 49px;
             background-position: -500px -50px;
-            background-image: url(../assets/icons.png);
+            background-image: url(/data/include/cms/MkFresh/theme/icons.png);
         }
     }
 }
