--- a/old/index-old.css
+++ b/old/index-old.css
@@ -15561,7 +15561,7 @@ header #menu_settings {
     width: 4rem;
     height: 4rem;
     background-position: -100px -75px;
-    background-image: url(../assets/icons.png);
+    background-image: url(/data/include/cms/MkFresh/theme/icons.png);
 }
 
 @media (min-width: 979px) {
