--- a/style/scss/IAI/fonts.scss
+++ b/style/scss/IAI/fonts.scss
@@ -2,7 +2,7 @@
     font-family: Futura;
     font-weight: 300;
     font-display: swap;
-    src: url(../assets/fonts/futuraltpro-light.otf) format("truetype");
+    src: url(/data/include/cms/MkFresh/theme/fonts/futuraltpro-light.otf) format("truetype");
 }
 
 @font-face {
@@ -10,8 +10,8 @@
     font-weight: 400;
     font-display: swap;
     src:
-        url(../assets/fonts/futuraltpro-book.woff) format("woff"),
-        url(../assets/fonts/futuraltpro-book.otf) format("truetype");
+        url(/data/include/cms/MkFresh/theme/fonts/futuraltpro-book.woff) format("woff"),
+        url(/data/include/cms/MkFresh/theme/fonts/futuraltpro-book.otf) format("truetype");
 }
 
 @font-face {
@@ -19,8 +19,8 @@
     font-weight: 500;
     font-display: swap;
     src:
-        url(../assets/fonts/futuraltpro-medium.woff) format("woff"),
-        url(../assets/fonts/futuraltpro-medium.otf) format("truetype");
+        url(/data/include/cms/MkFresh/theme/fonts/futuraltpro-medium.woff) format("woff"),
+        url(/data/include/cms/MkFresh/theme/fonts/futuraltpro-medium.otf) format("truetype");
 }
 
 @font-face {
@@ -28,17 +28,17 @@
     font-weight: 700;
     font-display: swap;
     src:
-        url(../assets/fonts/futuraltpro-bold.woff) format("woff"),
-        url(../assets/fonts/futuraltpro-bold.otf) format("truetype");
+        url(/data/include/cms/MkFresh/theme/fonts/futuraltpro-bold.woff) format("woff"),
+        url(/data/include/cms/MkFresh/theme/fonts/futuraltpro-bold.otf) format("truetype");
 }
 
 @font-face {
     font-family: "FontAwesome";
     src:
-        url("../assets/fonts/fontello.eot#iefix") format("embedded-opentype"),
-        url("../assets/fonts/fontello.woff?r=1698404668") format("woff"),
-        url("../assets/fonts/fontello.ttf?r=1698404668") format("truetype"),
-        url("../assets/fonts/fontello.svg#fontello") format("svg");
+        url("/data/include/cms/MkFresh/theme/fonts/fontello.eot#iefix") format("embedded-opentype"),
+        url("/data/include/cms/MkFresh/theme/fonts/fontello.woff?r=1698404668") format("woff"),
+        url("/data/include/cms/MkFresh/theme/fonts/fontello.ttf?r=1698404668") format("truetype"),
+        url("/data/include/cms/MkFresh/theme/fonts/fontello.svg#fontello") format("svg");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
