--- a/style/scss/our/mainpage.scss
+++ b/style/scss/our/mainpage.scss
@@ -36,7 +36,7 @@
     width: 4.4rem;
     height: 3.6rem;
     background-position: -250px -50px;
-    background-image: url(../assets/icons.png);
+    background-image: url(/data/include/cms/MkFresh/theme/icons.png);
 }
 .icon--product-trust-truck:before {
     display: block;
@@ -44,14 +44,14 @@
     width: 7.2rem;
     height: 6rem;
     background-position: -300px -50px;
-    background-image: url(../assets/icons.png);
+    background-image: url(/data/include/cms/MkFresh/theme/icons.png);
 }
 .icon--48-hours:before {
     display: block;
     content: " ";
     height: 48px;
     background-position: -373px -50px;
-    background-image: url(../assets/icons.png);
+    background-image: url(/data/include/cms/MkFresh/theme/icons.png);
     width: 66px;
 }
 .icon--product-trust-globe:before {
@@ -60,7 +60,7 @@
     width: 4.8rem;
     height: 4.8rem;
     background-position: -450px -50px;
-    background-image: url(../assets/icons.png);
+    background-image: url(/data/include/cms/MkFresh/theme/icons.png);
 }
 
 $overlay-color: rgba(0, 0, 0, 0.5);
