--- a/style/index.scss
+++ b/style/index.scss
@@ -64,7 +64,5 @@
 
 .ck_dsclr__btn_v2{
     background: #b29370 !important;
-    a{
-        color:#b29370 !important
-    }
 }
+.ck_dsclr_v2 a{color:#b29370 !important}
