--- a/style/scss/IAI/media-query.scss
+++ b/style/scss/IAI/media-query.scss
@@ -1091,6 +1091,7 @@
         }
         aside[class*="col-"] {
             display: block !important;
+            right: 0;;
         }
         #content {
             position: relative;
