POPRAWKI: sortowanie na prawo + obsługa braku filtrów + opisy produktu + usunąć text-decoration z product + "brak danych" wycentrować + przeliczanie na gramy + pobieranie daty palenia +

--- a/style/scss/IAI/media-query.scss
+++ b/style/scss/IAI/media-query.scss
@@ -1091,7 +1091,7 @@
         }
         aside[class*="col-"] {
             display: block !important;
-            right: 0;;
+            right: 0;
         }
         #content {
             position: relative;
@@ -8237,15 +8237,31 @@
     .search_description {
         margin-bottom: 1.5rem;
     }
-    #paging_setting_top.s_paging {
-        display: flex;
-        flex-wrap: wrap;
-        margin: 0 -0.75rem;
-        .s_paging__item {
-            flex: 1 0 50%;
-            padding: 0 0.75rem;
+    // #paging_setting_top.s_paging {
+    //     display: flex;
+    //     flex-wrap: wrap;
+    //     margin: 0 -0.75rem;
+    //     .s_paging__item {
+    //         flex: 1 0 50%;
+    //         padding: 0 0.75rem;
+    //     }
+    // }
+
+    #container.search_page {
+        #paging_setting_top.s_paging {
+            display: flex;
+            flex-wrap: wrap;
+            margin: 0 -0.75rem;
+            justify-content: end;
+            align-items: flex-end;
+            .s_paging__item {
+                flex: 1 0 50%;
+                padding: 0 0.75rem;
+                max-width: 350px;
+            }
         }
     }
+
     #filter_list {
         margin-bottom: 1.5rem;
         .menu_messages_warning {
