--- a/style/scss/IAI/button.scss
+++ b/style/scss/IAI/button.scss
@@ -114,11 +114,13 @@
     &:not(.--solid) {
         &:not(.--outline) {
             &:not(.--secondary) {
-                &:not(.--icon) {
-                    text-decoration: underline;
-                    color: #333;
-                    &:hover {
-                        color: #b29370;
+                &:not(.--add) {
+                    &:not(.--icon) {
+                        text-decoration: underline;
+                        color: #333;
+                        &:hover {
+                            color: #b29370;
+                        }
                     }
                 }
             }
