poprawki: wykresy, animacja przycisku 'sprawdź' linki w banerach i footerze pobieranie danych do produktu przez ajax wyświetlanie map wyświetlanie nazw regionu brakujące mapy info o produkcie na mobile style przelicznika na gramy

--- a/style/index.scss
+++ b/style/index.scss
@@ -61,8 +61,15 @@
     display: none;
 }
 
-
-.ck_dsclr__btn_v2{
+.ck_dsclr__btn_v2 {
     background: #b29370 !important;
 }
-.ck_dsclr_v2 a{color:#b29370 !important}
+.ck_dsclr_v2 a {
+    color: #b29370 !important;
+}
+
+table td {
+    padding: 1rem;
+    font-size: 1.3rem;
+    text-align: center;
+}
