--- a/style/scss/IAI/IAI.scss
+++ b/style/scss/IAI/IAI.scss
@@ -5159,9 +5159,9 @@ div.loginedit_cms {
         &:before {
             font-family: FontAwesome;
             content: "\F1A0";
-            font-size: 2rem;
+            // font-size: 2rem;
             color: #ff3939;
-            height: 2rem;
+            // height: 2rem;
         }
     }
 
@@ -9504,9 +9504,9 @@ div.signin_inputs {
         &:before {
             font-family: FontAwesome;
             content: "\F1A0";
-            font-size: 2rem;
+            // font-size: 2rem;
             color: #ff3939;
-            height: 2rem;
+            // height: 2rem;
         }
     }
     .service_item[data-name="service_Facebook"] {
