--- a/style/index.scss
+++ b/style/index.scss
@@ -73,3 +73,9 @@ table td {
     font-size: 1.3rem;
     text-align: center;
 }
+
+.news_page {
+    .headline {
+        justify-content: start;
+    }
+}
