--- a/style/scss/IAI/order/order-2.scss
+++ b/style/scss/IAI/order/order-2.scss
@@ -634,6 +634,8 @@ form.order2_form {
     clear: both;
     width: 100%;
     margin-bottom: 2rem;
+    justify-content: flex-start;
+    align-items: center;
     strong {
         font-size: 1.5rem;
         padding-right: 10px;
