--- a/style/scss/IAI/order/basket.scss
+++ b/style/scss/IAI/order/basket.scss
@@ -867,10 +867,14 @@ body.--basket-actions {
     }
 }
 div.basketedit_rebatecodes_outline {
-    display: none;
+    // display: none;
+    background-color: #f1f1f1;
     form {
-        display: inline-block;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         vertical-align: middle;
+        padding: 1rem;
         width: 100%;
     }
     #change_code {
@@ -952,15 +956,14 @@ span.basketedit_rebatecode_activate_txt {
     font-weight: bold;
     text-transform: uppercase;
     vertical-align: middle;
-    margin-right: 20px;
+    padding: 1rem;
     display: block;
-    margin-bottom: 10px;
 }
 input.basketedit_rebatecode_input {
-    height: 30px !important;
+    // height: 30px !important;
     vertical-align: top;
     width: 100%;
-    margin-bottom: 10px;
+    // margin-bottom: 10px;
     margin-right: 10px;
 }
 input.basketedit_change_code {
@@ -973,7 +976,7 @@ input.basketedit_submit_code {
     vertical-align: middle;
     background: none;
     box-shadow: none;
-    margin-bottom: 10px;
+    // margin-bottom: 10px;
     &::-moz-focus-inner {
         border: 0;
     }
