poprawki: - dodatkowa klasa do opisu produktu mw80 - poprawka styli kuponu rabatowego - poprawka wyboru faktury

--- a/style/index.scss
+++ b/style/index.scss
@@ -80,3 +80,9 @@ table td {
         justify-content: start;
     }
 }
+
+.mw80 {
+    @media screen and (min-width: 768px) {
+        max-width: 70% !important;
+    }
+}
