--- a/style/scss/IAI/order/basket.scss
+++ b/style/scss/IAI/order/basket.scss
@@ -895,6 +895,9 @@ div.basketedit_rebatecode_action {
 div.basketedit_rebatecode_r {
     float: left;
     margin-top: 20px;
+    @media screen and (min-width: 767px) {
+        margin-top: 0;
+    }
 }
 div.basketedit_rebatecode_title_out {
     clear: both;
