poprawki styli kodu rabatowego

--- a/style/index.scss
+++ b/style/index.scss
@@ -81,6 +81,10 @@ table td {
     }
 }
 
+.row.rabatCode {
+    width: 100%;
+}
+
 .mw80 {
     @media screen and (min-width: 768px) {
         max-width: 70% !important;
