--- a/style/scss/our/mainpage.scss
+++ b/style/scss/our/mainpage.scss
@@ -349,6 +349,6 @@ $overlay-color: rgba(0, 0, 0, 0.5);
     display: none;
 }
 
-#menu_categories .text-l {
+#menu_navbar > a {
     display: none;
 }
