--- a/style/scss/our/searchpage.scss
+++ b/style/scss/our/searchpage.scss
@@ -125,3 +125,7 @@ div.px-2.py-1.d-flex.flex-row.justify-content-center.align-items-center {
 .search_description {
     width: 100%;
 }
+
+#filter_list.icon-x {
+    position: absolute;
+}
